--- a/css/about.css
+++ b/css/about.css
@@ -199,12 +199,6 @@ body {
   font-size: clamp(0.9rem, 1.5vw, 1rem);
 }
 
-.btn-outline:hover {
-  background: var(--text);
-  color: white;
-  transform: translateY(-2px);
-  box-shadow: 0 5px 15px rgba(42, 178, 123, 0.2);
-}
 
 .nav-toggle {
   display: none;
@@ -366,7 +360,7 @@ body {
 }
 
 .carousel-nav button {
-  background: rgba(5, 30, 252, 0.89);
+  background: rgba(255, 255, 255, 0.2);
   border: none;
   width: 50px;
   height: 50px;
@@ -692,7 +686,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("https://images.unsplash.com/photo-1551076805-e1869033e561?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80");
+   background: rgba(0, 0, 0, 0.4);
   background-size: cover;
   background-position: center;
   opacity: 0.1;
@@ -703,7 +697,6 @@ body {
   color: var(--white);
   font-size: clamp(2.5rem, 4vw, 3rem);
   margin-bottom: 20px;
-  text-shadow: 10px 10px 20px rgb(9, 25, 243);
 }
 
 .cta-section p {
@@ -716,7 +709,7 @@ body {
 
 .btn-primary {
   background: white;
-  color: var(--primary);
+  color: var(--text);
   padding: 15px 35px;
   border-radius: 30px;
   font-weight: 700;
@@ -728,7 +721,7 @@ body {
 }
 
 .btn-primary:hover {
-  background: var(--text);
+  background: var(--primary);
   transform: translateY(-3px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
