--- a/css/contact.css
+++ b/css/contact.css
@@ -199,12 +199,12 @@ body {
   font-size: clamp(0.9rem, 1.5vw, 1rem);
 }
 
-.btn-outline:hover {
+/* .btn-outline:hover {
   background: var(--text);
   color: white;
   transform: translateY(-2px);
   box-shadow: 0 5px 15px rgba(42, 178, 123, 0.2);
-}
+} */
 
 .nav-toggle {
   display: none;
@@ -608,13 +608,13 @@ textarea.form-control {
 
 .footer-content {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 40px;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
   margin-bottom: 10px;
 }
 
 .footer-col h3 {
-  font-size: 1.3rem;
+  font-size: clamp(1.1rem, 2vw, 1.3rem);
   margin-bottom: 25px;
   color: var(--white);
   position: relative;
@@ -634,9 +634,6 @@ textarea.form-control {
 .footer-col p {
   margin-bottom: 20px;
   color: var(--text);
-}
-.footer-col i {
-  color: var(--white);
 }
 
 .footer-links {
@@ -674,7 +671,7 @@ textarea.form-control {
 .footer-logo-text {
   color: var(--text);
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: clamp(1.2rem, 2vw, 1.5rem);
 }
 
 .footer-bottom {
@@ -683,6 +680,10 @@ textarea.form-control {
   border-top: 1px solid rgba(255, 255, 255, 0.1);
   color: var(--text);
   font-size: 0.9rem;
+}
+
+.footer-col i {
+  color: var(--white);
 }
 
 /* Social Icons */
