--- a/css/doctors.css
+++ b/css/doctors.css
@@ -199,12 +199,12 @@ body {
   font-size: clamp(0.9rem, 1.5vw, 1rem);
 }
 
-.btn-outline:hover {
+/* .btn-outline:hover {
   background: var(--text);
   color: white;
   transform: translateY(-2px);
   box-shadow: 0 5px 15px rgba(42, 178, 123, 0.2);
-}
+} */
 
 .nav-toggle {
   display: none;
@@ -363,7 +363,7 @@ body {
 }
 
 .carousel-nav button {
-    background: rgba(5, 30, 252, 0.89);
+    background: rgba(255, 255, 255, 0.2);
   border: none;
   width: 50px;
   height: 50px;
@@ -757,19 +757,6 @@ body {
   text-align: center;
   background-attachment: fixed;
 }
-
-/* .cta-section::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  opacity: 0.1;
-  background-attachment: fixed;
-} */
 
 .cta-section h2 {
   color: var(--white);
