--- a/css/services.css
+++ b/css/services.css
@@ -186,7 +186,7 @@ body {
   background: var(--dark);
 }
 
-.btn-outline {
+.btn-outliner {
   background: transparent;
   border: 2px solid var(--secondary);
   color: var(--secondary);
@@ -199,12 +199,12 @@ body {
   font-size: clamp(0.9rem, 1.5vw, 1rem);
 }
 
-.btn-outline:hover {
+/* .btn-outliner:hover {
   background: var(--text);
   color: white;
   transform: translateY(-2px);
   box-shadow: 0 5px 15px rgba(42, 178, 123, 0.2);
-}
+} */
 
 .nav-toggle {
   display: none;
